Timestamp Fix & Formating
Fixed timestamp so it works with multiline entries.

Added more space between the log and the input box at the bottom so that smaller screens do not overlap the two.

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     border-style: solid;
     position: fixed;
     top: 20px;
-    bottom: 40px;
+    bottom: 60px;
 }
 
 .controls {
@@ -26,7 +26,7 @@
     width: 20%;
     height: 80%;
     top: 20px;
-    //border-style: solid;
+    /*border-style: solid;*/
     overflow: auto;
     padding: 1px;
 }
